refactor: valueSource 字面量集中到 ValueSource 枚举(值不变)